--- a/self-portrait/painting.css
+++ b/self-portrait/painting.css
@@ -6,31 +6,9 @@
     border-radius: 4px;
     
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 5rem 5rem 5rem 5rem 5rem;
+    grid-template-columns: 40px 50px auto 50px 40px;
+    grid-template-rows: 25% 100px auto;
     grid-row-gap: 100px;
     justify-items: center;
-}
-
-.box {
-  -webkit-transition: 2s; 
-  transition: 1s;
-}
-
-.box:hover {
-    width: 300px;
-    height: 300px;
-    transform:rotate(720deg);
-    -ms-transform:rotate(762deg);
-    -webkit-transform:rotate(720deg);
-}
-
-
-/* Boxes */
-.box1 {
-    width: 10px;
-    height: 90px;
-    background-color: gray;
-    transform: rotate(-45deg);
 }
 
