--- a/self-portrait/painting.css
+++ b/self-portrait/painting.css
@@ -19,4 +19,13 @@
     background: grey;
 
 }
+#rectangle1{
+    position: fixed;
+    bottom: 10px;
+    right: 0;
+    width: 150px;
+    height: 150;
+    border-radius: 50%;
+}
+
 
